# sony-copyleft

./: .gitattributes  README.md
asahi-1.0.0-rel/copyleft-publications/kernel_platform/common/: README_Xperia.txt
asahi-1.0.0-rel/copyleft-publications/kernel_platform/msm-kernel/: modules.list.msm.pineapple  modules.vendor_blocklist.msm.pineapple  pineapple.bzl  target_variants.bzl
asahi-1.1.0-rel/kernel_platform/bootable/bootloader/edk2/: BUILD.bazel  NOTICE  abl.bzl  makefile
asahi-1.1.0-rel/kernel_platform/bootable/bootloader/edk2/BaseTools/Conf/: build_rule.template
asahi-1.1.0-rel/kernel_platform/bootable/bootloader/edk2/QcomModulePkg/: QcomModulePkg.dec  build.config.msm.common
asahi-1.1.0-rel/kernel_platform/bootable/bootloader/edk2/QcomModulePkg/Include/Protocol/: EFIPmicFg.h
asahi-1.1.0-rel/kernel_platform/msm-kernel/: msm_kernel_la.bzl  pineapple.bzl
asahi-1.1.0-rel/kernel_platform/msm-kernel/kernel/: Makefile
asahi-1.1.0-rel_amss/AOP.HO.5.0/aop_proc/pack/: TestStripPack.py  add_uses_flag.py  clean_hy11.py  gen_compile_test.py  logger.py  pack_compile_test_all.cmd  pack_compile_test_all.py  pack_compile_test_all.sh
asahi-1.1.0-rel_amss/BOOT.MXF.2.1/boot_images/boot/: Boot_Common_Shippable_Files.txt  O0_check.py  SomcPkg  UEFI_License_and_Notice_File_QC.txt  build_dt.sh  copy_sectools.bat  copyright_check.sh  rpcheck.py  setting_catalog.txt  toolchainconfig.json  watchit.py
asahi-1.1.0-rel_amss/BOOT.MXF.2.1/boot_images/boot_tools/: LibSizeCheck.py  packit.py  (+9 more)
qssi-15.1.0-rel/libcore/: openjdk_java_files.bp
yodo-1.2.0-rel_amss/sony/fs/: NOTICE
(+5612 files in other folders)
