load(":abl.bzl", "define_abl_targets")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

string_flag(
    name = "target_build_variant",
    values = ["userdebug", "user"],
    build_setting_default = "userdebug",
)

# SONY_BEGIN
string_flag(
    name = "uses_feature_xboot",
    values = ["yes", "no"],
    build_setting_default = "no",
)
string_flag(
    name = "uses_feature_ramdump",
    values = ["yes", "no"],
    build_setting_default = "no",
)
# SONY_END

define_abl_targets()
